openshift/openshift-101/04-updates-and-quotas/layer1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: layer1
    version: v1
    app.kubernetes.io/part-of: layers
    app.openshift.io/runtime: nodejs
  name: layer1-v1
  namespace: app-2
spec:
  replicas: 10
  selector:
    matchLabels:
      app: layer1
      version: v1
  template:
    metadata:
      labels:
        app: layer1
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: layer1
# alternative deployments
        image: quay.io/marrober/layers@sha256:97864ced6b809c255d2bb98f033456089978ef208c1b4bba41e2e63f2066d2ed
#        image: quay.io/marrober/layers@sha256:a89e42f57b8d2f7fe748187d8dbc10e1dadd3dac0624fb7c9f95e4ef22fd691f
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 400m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: 
            - ALL
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 10%
      maxSurge: 20%
---
apiVersion: v1
kind: Service
metadata:
  name: layer1-v1
  namespace: app-2
  labels:
    app: layer1   
    version: v1 
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: layer1
    version: v1
