openshift/openshift-101/04-updates-and-quotas/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: 02-app-con
  namespace: app-2
spec:
  to:
    kind: Service
    name: layer1-v1
    weight: 70
  port:
    targetPort: http
  wildcardPolicy: None
